# evo2-brca1-variant-effect

./: .env.example  .gitignore  LEARNINGS.md  LICENSE  Makefile  NOTES.md  PRIMER.md  README.md  RESULTS.md  pyproject.toml  requirements-lock.txt  requirements-modal.txt  requirements.txt
data/: README.md
data/cache/: evo2_delta_scores.csv
docs/: ACCESS_PATH.md  portfolio_blurb.md
results/: example_explanations.txt
results/metrics/: alphamissense_benchmark.json  classifier_metrics.json  ensemble.json  honesty_metrics.json
src/gvep/: __init__.py  cli.py  config.py  explain.py
src/gvep/analysis/: __init__.py  alphamissense.py  classifier.py  dataset.py  ensemble.py  honesty.py  sanity.py
src/gvep/app/: api.py  ui.py
src/gvep/data/: __init__.py  build.py  clinvar.py  findlay.py  reference.py  windows.py
src/gvep/scoring/: __init__.py  modal_app.py
src/gvep/utils/: __init__.py  io.py  seed.py
